--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -21,7 +21,7 @@
 
 
       <!-- document.querySelector() always gives first value if mutliple values are present 
-      
+      in document.querySelector() #is used for id selector and . is used for class selector .just like css selectors.
       -->
       <h2>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum vero
@@ -31,6 +31,12 @@
       </h2>
       <h2>lorem4</h2>
       <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+
+      <ul>
+        <li>one</li>
+        <li>two</li>
+        <li>three</li>
+      </ul>
     </div>
   </body>
 </html>
