--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -1,42 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Dom Manipulation</title>
-    <style>
-      .bg-black {
-        background-color: #212121;
-        color: #fff;
-      }
-    </style>
-  </head>
-  <body class="bg-black">
-    <!-- document.textContent ke andar aapko saara ka saara text milta hai -->
-    <div>
-      <h1 id="title" class="heading">
-        Dom Learning on Chai aur Code
-        <span style="display: none; font-weight: 100"> test and text</span>
-      </h1>
-      <p>Lorem ipsum dolor sit amet.</p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DOM lEARNING</title>
+  <style>
+    body{
+      background-color: #212121;
+      color:white;
+    }
 
+  </style>
+</head>
+<body>
+  <div class="bg-black">
+    <h1 id="title" class="heading">
+      dom learning on chai aur code 
+      <span style="display: non"> oh i love </span> 
+    
+    
+    </h1>
+  <h1 class="sher">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+  <h1 class="sher">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+  <h1 class="sher">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+  <h1 class="sher">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+  <h1 class="sher">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+  <input type="password">
 
-      <!-- document.querySelector() always gives first value if mutliple values are present 
-      in document.querySelector() #is used for id selector and . is used for class selector .just like css selectors.
-      -->
-      <h2>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum vero
-        voluptas rem molestias ipsum ab doloribus ipsam iusto iste, cupiditate
-        similique impedit ipsa voluptatum minima eveniet aspernatur itaque
-        praesentium perspiciatis?
-      </h2>
-      <h2>lorem4</h2>
-      <h2>Lorem ipsum dolor sit amet consectetur.</h2>
-
-      <ul>
-        <li>one</li>
-        <li>two</li>
-        <li>three</li>
-      </ul>
-    </div>
-  </body>
+  //querySelector gives only one element
+  //querySelectorAll gives node list which does not have map
+  //array in js have map
+  //getElementByClass gives html collection which we can convert in array by Array.from(html collection) and then uses methods of array.
+  </div>
+  <p>Lorem ipsum dolor sit amet.</p>
+</body>
 </html>
